# PhysicsEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_vs2022.bat  vcpkg.json
src/: core.h  main.cpp
src/events/: input.cpp  input.h
src/io/: file_reader.h
src/logging/: log.cpp  log.h
src/renderer/: shader.cpp  shader.h  window.cpp  window.h
src/renderer/camera/: camera.h  perspective_camera.cpp  perspective_camera.h  perspective_camera_controller.cpp  perspective_camera_controller.h
